# Ucode_public

./: README.md  mx_cube.c  mx_printchar.c
all_functions/: file_to_str.h  header.h  main.c  mx.toupper.c  mx_arr_rotate.c  mx_atoi.c  mx_binary_search.c  mx_bubble_sort.c  mx_cat.c  mx_comparator.c  mx_concat_words.c  mx_copy_int_arr.c  mx_count_substr.c  mx_count_words.c  mx_cp.c  mx_create_agent.c  mx_create_new_agents.c  mx_del_dup_arr.c  mx_del_dup_sarr.c  mx_del_extra_whitespaces.c  mx_del_strarr.c  mx_deref_pointer.c  mx_exterminate_agents.c  mx_factorial_iter.c  mx_factorial_rec.c  mx_file_to_str.c  mx_foreach.c  mx_gcd.c  mx_get_address.c  mx_hex_to_nbr.c  mx_hexadecimal.c  mx_insertion_sort.c  mx_is_narcissistic.c  mx_is_odd.c  mx_is_positive.c  mx_isalpha.c  mx_isdigit.c  mx_islower.c  mx_isos_triangle.c  mx_isspace.c  (+56 more)
race00/: 3d_cube.c  SOF_cube.c
sprint06/: CMakeLists.txt
